[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[[bin]]
name = "aoc-2024"
path = "src/main.rs"
test = false

[dependencies]
arrayvec = "0.7.6"
clap = { version = "4.4.10", features = ["derive"] }
indexmap = "2.7.0"
itertools = "0.13.0"
num = "0.4.3"
rustc-hash = "2.0.0"
winnow = "0.6.20"

[profile.bench]
lto = true
codegen-units = 1
